fix: white space issue in firefox

--- a/packages/theme-nord/style/nodes.css
+++ b/packages/theme-nord/style/nodes.css
@@ -2,7 +2,6 @@
     .paragraph {
         font-size: 1rem;
         line-height: 1.5;
-        white-space: normal;
         letter-spacing: 0.5px;
     }
 
